--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -761,3 +761,6 @@
  STATE_760:0 "Dabancheng"
  STATE_761:0 "Hulunbuir"
  STATE_762:0 "Kattowitz"
+ STATE_763:0 "Togo"
+ STATE_764:0 "Benin"
+ STATE_765:0 "Ivory Coast"
