--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -121,21 +121,23 @@ AUS_revolutionary_nationalist_party:0 "DAP"
 AUS_revolutionary_nationalist_party_long:0 "Deutsche Arbeiterpartei"
 
 #Finland
-FIN_jacobin_socialist_party:0 "SJP"
-FIN_jacobin_socialist_party_long:0 "Suomen Jakobin Puolue"
-FIN_collectivist_party:0 "SSP"
+FIN_internationalist_party:0 "SKP"
+FIN_internationalist_party_long:0 "Suomen Kommunistinen Puolue"
+FIN_jacobin_socialist_party:0 "SKP"
+FIN_jacobin_socialist_party_long:0 "Suomen Kommunistinen Puolue"
+FIN_collectivist_party:0 "SDP"
 FIN_collectivist_party_long:0 "Suomen Sosialidemokraattinen Puolue"
 FIN_libertarian_socialist_party:0 "SST"
 FIN_libertarian_socialist_party_long:0 "Suomen Sosialistinen Työväenpuolue"
-FIN_social_democrat_party:0 "SSP"
+FIN_social_democrat_party:0 "SDP"
 FIN_social_democrat_party_long:0 "Suomen Sosialidemokraattinen Puolue"
 FIN_social_liberal_party:0 "RKP"
 FIN_social_liberal_party_long:0 "Suomen Ruotsalainen Kansanpuolue"
 FIN_market_liberal_party:0 "KE"
 FIN_market_liberal_party_long:0 "Kansallinen Edistyspuolue"
-FIN_social_conservative_party:0 "Maalaisliitto"
+FIN_social_conservative_party:0 "Kesk"
 FIN_social_conservative_party_long:0 "Maalaisliitto"
-FIN_authoritarian_democrat_party:0 "KK"
+FIN_authoritarian_democrat_party:0 "Kok"
 FIN_authoritarian_democrat_party_long:0 "Kansallinen Kokoomus"
 FIN_paternal_autocrat_party:0 "Holhoojahallitus"
 FIN_paternal_autocrat_party_long:0 "Holhoojahallitus"
