--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -2,5 +2,6 @@
  LOADING_TIP_0:0 "My name is Fanya Kaplan. Today I shot Lenin. I had resolved to kill Lenin long ago. I consider him a traitor to the Revolution.\n- Fanya Kaplan after the assassination of Vladimir Lenin, 1918"
  LOADING_TIP_1:0 "There is only one person who is master in this Empire and I am not going to tolerate any other.\n- Kaiser Wilhelm II"
  LOADING_TIP_2:0 "I regard every Social Democrat as an enemy of the Empire and Fatherland.\n- Kaiser Wilhelm II"
- LOADING_TIP_3:0 "I look upon him as the greatest criminal known for having plunged the world into war.\n- George V on his cousin, Wilhelm II"
- LOADING_TIP_4:0 "After I am dead, the boy will ruin himself in twelve months.\n- George V on his son, Edward"
+ LOADING_TIP_3:0 "I look upon him as the greatest criminal known for having plunged the world into war.\n- King George V on his cousin, Wilhelm II"
+ LOADING_TIP_4:0 "After I am dead, the boy will ruin himself in twelve months.\n- King George V on his son, Edward"
+ LOADING_TIP_5:0 "In our age there is no such thing as 'keeping out of politics.' All issues are political issues, and politics itself is a mass of lies, evasions, folly, hatred and schizophrenia.\n- Eric Blair"
