--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -512,8 +512,8 @@
  STATE_511:0 "Mendoza"
  STATE_512:0 "Patagonia"
  STATE_513:0 "Tlemcen"
- STATE_514:0 "Algerian Desert"
- STATE_515:0 "Southern Sahara"
+ STATE_514:0 "Maghreb"
+ STATE_515:0 "Niger-Chad"
  STATE_516:0 "Northwest Siberia"
  STATE_517:0 "Victoria"
  STATE_518:0 "Tasmania"
@@ -544,7 +544,7 @@
  STATE_543:0 "Madagascar"
  STATE_544:0 "Mozambique"
  STATE_545:0 "Rhodesia"
- STATE_546:0 "Tanganyika"
+ STATE_546:0 "Tanganjika"
  STATE_547:0 "Kenya"
  STATE_548:0 "Uganda"
  STATE_549:0 "Sudan"
@@ -761,6 +761,6 @@
  STATE_760:0 "Dabancheng"
  STATE_761:0 "Hulunbuir"
  STATE_762:0 "Kattowitz"
- STATE_763:0 "Togo"
+ STATE_763:0 "Togoland"
  STATE_764:0 "Benin"
- STATE_765:0 "Ivory Coast"
+ STATE_765:0 "Côte d'Ivoire"
