--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -284,19 +284,19 @@ RUS_vanguardist_party_long:0 "Rossiyskaya Sotsial-Demokraticheskaya Rabochaya Pa
 RUS_collectivist_party:0 "Right Bolsheviks"
 RUS_collectivist_party_long:0 "Rossiyskaya Sotsial-Demokraticheskaya Rabochaya Partiya"
 RUS_libertarian_socialist_party:0 "Mensheviks"
-RUS_libertarian_socialist_party_long:0 "Rossiyskaya Sotsial-Demokraticheskaya Rabochaya Partiya"
+RUS_libertarian_socialist_party_long:0 "Rossiyskaya Sotsial-Demokraticheskaya Rabochaya Partiya (Menshevikov)"
 RUS_social_democrat_party:0 "SRs"
 RUS_social_democrat_party_long:0 "Partiya Socialistov-Revolyutsionerov"
-RUS_social_liberal_party:0 "Trudoviks"
-RUS_social_liberal_party_long:0 "Trudovaya Gruppa"
-RUS_market_liberal_party:0 "Kadets"
-RUS_market_liberal_party_long:0 "Konstitutsionno-Demokraticheskaya Partiya"
-RUS_social_conservative_party:0 "Oktobrists"
+RUS_social_liberal_party:0 "Kadets"
+RUS_social_liberal_party_long:0 "Konstitutsionno-Demokraticheskaya Partiya"
+RUS_market_liberal_party:0 "Progressist party"
+RUS_market_liberal_party_long:0 "Progresivnaya partiya"
+RUS_social_conservative_party:0 "Oktobristy"
 RUS_social_conservative_party_long:0 "Soyuz 17 Oktyabrya"
-RUS_authoritarian_democrat_party:0 "RIS-O"
-RUS_authoritarian_democrat_party_long:0 "Rossiyskiy Imperskiy Soyuz Orden"
-RUS_paternal_autocrat_party:0 "ROVS"
-RUS_paternal_autocrat_party_long:0 "Russkiy Obshe-Voinskiy Soyuz"
+RUS_authoritarian_democrat_party:0 "ROVS"
+RUS_authoritarian_democrat_party_long:0 "Russkiy Obshe-Voinskiy Soyuz"
+RUS_paternal_autocrat_party:0 "Resurrectionist party"
+RUS_paternal_autocrat_party_long:0 "Storona voskreseniya"
 RUS_national_populist_party:0 "NTS"
 RUS_national_populist_party_long:0 "Narodnno-Trudovoy Soyuz Rossiyskich Solidaristov"
 RUS_revolutionary_nationalist_party:0 "Smenovekhovtsy"
