Fixed German party names

--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -253,19 +253,19 @@ LUX_revolutionary_nationalist_party_long:0 "Volksdeutsche Bewegung"
 #Germany
 GER_internationalist_party:0 "Spartakusbund"
 GER_internationalist_party_long:0 "Spartakusbund"
-GER_vanguardist_party:0 "Kommunistische"
+GER_vanguardist_party:0 "Kommunisten"
 GER_vanguardist_party_long:0 "Kommunistische Partei Deutschlands"
-GER_collectivist_party:0 "Sozialistische"
+GER_collectivist_party:0 "Sozialisten"
 GER_collectivist_party_long:0 "Sozialistische Arbeiterpartei Deutschlands"
 GER_libertarian_socialist_party:0 "USPD"
 GER_libertarian_socialist_party_long:0 "Unabhängige Sozialdemokratische Partei Deutschlands"
-GER_social_democrat_party:0 "Sozialdemokratische"
+GER_social_democrat_party:0 "Sozialdemokraten"
 GER_social_democrat_party_long:0 "Sozialdemokratische Partei Deutschlands"
 GER_social_liberal_party:0 "Fortschrittliche"
 GER_social_liberal_party_long:0 "Fortschrittliche Volkspartei"
 GER_market_liberal_party:0 "Nationalliberale"
 GER_market_liberal_party_long:0 "Nationalliberale Partei"
-GER_social_conservative_party:0 "Zentrum"
+GER_social_conservative_party:0 "Zentrumpartei"
 GER_social_conservative_party_long:0 "Deutsche Zentrumspartei"
 GER_authoritarian_democrat_party:0 "Deutschkonservative"
 GER_authoritarian_democrat_party_long:0 "Deutschkonservative Partei"
@@ -273,7 +273,7 @@ GER_paternal_autocrat_party:0 "Kaisertreue"
 GER_paternal_autocrat_party_long:0 "Kaisertreue Regierung"
 GER_national_populist_party:0 "Reichspartei"
 GER_national_populist_party_long:0 "Deutsche Reichspartei"
-GER_revolutionary_nationalist_party:0 "Volksozialistische"
+GER_revolutionary_nationalist_party:0 "Volksozialisten"
 GER_revolutionary_nationalist_party_long:0 "Volksozialistische Arbeiterpartei"
 
 #Russia
