--- a/localisation/ToR_Countries_l_english.yml
+++ b/localisation/ToR_Countries_l_english.yml
@@ -1146,9 +1146,6 @@ FIN_national_populist_ADJ:0 "Finnish"
 FIN_national_populist_DEF:0 "The State of Finland"
 
 #Swiss Confederation
-SWI_internationalist:0 "Helvetic Union"
-SWI_internationalist_ADJ:0 "Helvetic"
-SWI_internationalist_DEF:0 "The Helvetic Union"
 SWI_vanguardist:0 "Helvetic Union"
 SWI_vanguardist_ADJ:0 "Helvetic"
 SWI_vanguardist_DEF:0 "The Union of Helvetica"
@@ -1316,7 +1313,9 @@ MOU_paternal_autocrat_DEF:0 "the Caucasian Emirate"
 MOU_national_populist:0 "North Caucasian State"
 MOU_national_populist_ADJ:0 "North Caucasian"
 MOU_national_populist_DEF:0 "the North Caucasian State"
-
+MOU_revolutionary_nationalist:0 "Great Caucasian State"
+MOU_revolutionary_nationalist_ADJ:0 "Caucasian"
+MOU_revolutionary_nationalist_DEF:0 "Great Caucasian State"
 #Turkestan
 TRK_vanguardist:0 "Turkestani Popular State"
 TRK_vanguardist_ADJ:0 "Turkestani"
@@ -2239,40 +2238,40 @@ RFN_revolutionary_nationalist:0 "Suomen Valtakunta"
 RFN_revolutionary_nationalist_ADJ:0 "Suomalainen"
 RFN_revolutionary_nationalist_DEF:0 "Suomen Valtakunta"
 
-# Kazakhstan
-KAZ_vanguardist:0 "Kazakh Peoples Republic"
-KAZ_vanguardist_ADJ:0 "Kazakh"
-KAZ_vanguardist_DEF:0 "The Peoples Republic of Kazakhstan"
-KAZ_collectivist:0 "Kazakh Socialist Republic"
-KAZ_collectivist_ADJ:0 "Kazakh"
-KAZ_collectivist_DEF:0 "The Peoples Republic of Kazakhstan"
-KAZ_libertarian_socialist:0 "Kazakh Socialist Republic"
-KAZ_libertarian_socialist_ADJ:0 "Kazakh"
-KAZ_libertarian_socialist_DEF:0 "The Socialist Republic of Kazakhstan"
-KAZ_social_democrat:0 "Republic of Kazakhstan"
-KAZ_social_democrat_ADJ:0 "Kazakh"
-KAZ_social_democrat_DEF:0 "The Republic of Kazakhstan"
-KAZ_social_liberal:0 "Republic of Kazakhstan"
-KAZ_social_liberal_ADJ:0 "Kazakh"
-KAZ_social_liberal_DEF:0 "The Republic of Kazakhstan"
-KAZ_market_liberal:0 "Republic of Kazakhstan"
-KAZ_market_liberal_ADJ:0 "Kazakh"
-KAZ_market_liberal_DEF:0 "The Republic of Kazakhstan"
-KAZ_social_conservative:0 "Republic of Kazakhstan"
-KAZ_social_conservative_ADJ:0 "Kazakh"
-KAZ_social_conservative_DEF:0 "The Republic of Kazakhstan"
-KAZ_authoritarian_democrat:0 "Republic of Kazakhstan"
-KAZ_authoritarian_democrat_ADJ:0 "Kazakh"
-KAZ_authoritarian_democrat_DEF:0 "The Republic of Kazakhstan"
-KAZ_paternal_autocrat:0 "Khanate of Kazakhstan"
-KAZ_paternal_autocrat_ADJ:0 "Kazakh"
-KAZ_paternal_autocrat_DEF:0 "The Great Khanate of Kazakhstan"
-KAZ_national_populist:0 "Great Kazakhstan"
-KAZ_national_populist_ADJ:0 "Kazakh"
-KAZ_national_populist_DEF:0 "The Great Nation of Kazakhstan"
-KAZ_revolutionary_nationalist:0 "Қазақстан"
-KAZ_revolutionary_nationalist_ADJ:0 "Qazaqstandıqtar"
-KAZ_revolutionary_nationalist_DEF:0 "Қазақтың ұлы мемлекеті"
+# Khanate of Turks
+KHA_vanguardist:0 "Turkic Peoples Republic"
+KHA_vanguardist_ADJ:0 "Turkic "
+KHA_vanguardist_DEF:0 "Turkic peoples republic"
+KHA_collectivist:0 "Turkic Socialist Republic"
+KHA_collectivist_ADJ:0 "Turkic "
+KHA_collectivist_DEF:0 "Turkic peoples republic"
+KHA_libertarian_socialist:0 "Turkic Socialist Republic"
+KHA_libertarian_socialist_ADJ:0 "Turkic "
+KHA_libertarian_socialist_DEF:0 "Turkic socialist republic"
+KHA_social_democrat:0 "Turkic republic"
+KHA_social_democrat_ADJ:0 "Turkic "
+KHA_social_democrat_DEF:0 "Turkic republic"
+KHA_social_liberal:0 "Turkic Republic"
+KHA_social_liberal_ADJ:0 "Turkic "
+KHA_social_liberal_DEF:0 "Turkic republic"
+KHA_market_liberal:0 "Turkic Republic"
+KHA_market_liberal_ADJ:0 "Turkic "
+KHA_market_liberal_DEF:0 "Turkic republic"
+KHA_social_conservative:0 "Turkic Republic"
+KHA_social_conservative_ADJ:0 "Turkic "
+KHA_social_conservative_DEF:0 "Turkic republic"
+KHA_authoritarian_democrat:0 "Turkic Republic"
+KHA_authoritarian_democrat_ADJ:0 "Turkic "
+KHA_authoritarian_democrat_DEF:0 "Turkic republic"
+KHA_paternal_autocrat:0 "The Great Turkic Khanate"
+KHA_paternal_autocrat_ADJ:0 "Turkic "
+KHA_paternal_autocrat_DEF:0 "The Great Turkic Khanate"
+KHA_national_populist:0 "Great Turkic Nation"
+KHA_national_populist_ADJ:0 "Turkic "
+KHA_national_populist_DEF:0 "The Great Turkic Nation"
+KHA_revolutionary_nationalist:0 "Turkic state"
+KHA_revolutionary_nationalist_ADJ:0 "Turkic"
+KHA_revolutionary_nationalist_DEF:0 "Turkic state"
 
 ############
 # AMERICAS #
@@ -3236,40 +3235,6 @@ BAL_revolutionary_nationalist:0 "Baluchistan"
 BAL_revolutionary_nationalist_ADJ:0 "Baluchistani"
 BAL_revolutionary_nationalist_DEF:0 "Baluchistan"
 
-#Khalistan
-KHA_vanguardist:0 "Khalistan"
-KHA_vanguardist_ADJ:0 "Khalistani"
-KHA_vanguardist_DEF:0 "Khalistan"
-KHA_collectivist:0 "Khalistan"
-KHA_collectivist_ADJ:0 "Khalistani"
-KHA_collectivist_DEF:0 "Khalistan"
-KHA_libertarian_socialist:0 "Khalistan"
-KHA_libertarian_socialist_ADJ:0 "Khalistani"
-KHA_libertarian_socialist_DEF:0 "Khalistan"
-KHA_social_democrat:0 "Khalistan"
-KHA_social_democrat_ADJ:0 "Khalistani"
-KHA_social_democrat_DEF:0 "Khalistan"
-KHA_social_liberal:0 "Khalistan"
-KHA_social_liberal_ADJ:0 "Khalistani"
-KHA_social_liberal_DEF:0 "Khalistan"
-KHA_market_liberal:0 "Khalistan"
-KHA_market_liberal_ADJ:0 "Khalistani"
-KHA_market_liberal_DEF:0 "Khalistan"
-KHA_social_conservative:0 "Khalistan"
-KHA_social_conservative_ADJ:0 "Khalistani"
-KHA_social_conservative_DEF:0 "Khalistan"
-KHA_authoritarian_democrat:0 "Khalistan"
-KHA_authoritarian_democrat_ADJ:0 "Khalistani"
-KHA_authoritarian_democrat_DEF:0 "Khalistan"
-KHA_paternal_autocrat:0 "Khalistan"
-KHA_paternal_autocrat_ADJ:0 "Khalistani"
-KHA_paternal_autocrat_DEF:0 "Khalistan"
-KHA_national_populist:0 "Khalistan"
-KHA_national_populist_ADJ:0 "Khalistani"
-KHA_national_populist_DEF:0 "Khalistan"
-KHA_revolutionary_nationalist:0 "Khalistan"
-KHA_revolutionary_nationalist_ADJ:0 "Khalistani"
-KHA_revolutionary_nationalist_DEF:0 "Khalistan"
 
 #Kashmir
 KAS_vanguardist:0 "Kashmir"
@@ -7835,7 +7800,7 @@ RUS_paternal_autocrat_ADJ:0 "Russian"
 RUS_paternal_autocrat_DEF:0 "The Republic of Russia"
 RUS_national_populist:0 "Russian Republic"
 RUS_national_populist_ADJ:0 "Russian"
-RUS_national_populist_DEF:0 "The Republic of Russia"
+RUS_national_populist_DEF:0 "Russian Republic"
 RUS_revolutionary_nationalist:0 "Russian National Republic"
 RUS_revolutionary_nationalist_ADJ:0 "Russian"
 RUS_revolutionary_nationalist_DEF:0 "The All-Russian National Republic"
