--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -11,3 +11,9 @@ l_english:
  RUS_kaisers_influence_desc:0 "Over the years, Kaiser Wilhelm II has managed to set up an extensive diplomatic and propagandistic connections with Russian people"
  RUS_church_question:0 "Church question"
  RUS_church_question_desc:0 "Our church is lazy and corrupted, reforms will need to take place sooner or later."
+ MEX_state_controlled_education:0 "State-controlled education"
+ MEX_state_controlled_education_desc:0 "Calles sees education as the key institution to transform Mexico into a greater state."
+ MEX_land_reforms:0 "Land reforms"
+ MEX_land_reforms_desc:0 "First Calles supported land reforms and promoted the ejidos. Now he turns his attention to seize all the land he can to build up Mexico greatly."
+ MEX_goldshirts:0 "The Goldshirts"
+ MEX_goldshirts:0 "The Goldshirts under Carrasco are a great way to get soldiers into the army, but most of the members are untrained or just savages who make chaos."
