stuff i've been doing 2018-06-16

--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -62,7 +62,7 @@ paternal_autocrat_subtype_desc:0 "Paternal Autocracy is not a political ideology
 
 national_populist_subtype_desc:0 "Encompassing a variety of ultra-nationalist and militaristic movements, National Populism typically venerates devotion to the state, uniting the people under a strong leader and a corporate economy. Diplomatically, National Populists typically emphasize Expansionist, Hawkish, and Revanchist policies when appropriate or relevant to the given Nation. Often espousing racial politics and violent rhetoric, National Populism is vehemently opposed by most other political parties."
 
-revolutionary_nationalist_subtype_desc:0 "Revolutionary Nationalism is a catch-all term for all ideologies that promote ultranationalism, militarism and revolution against old, reactionary structures. It advocates that the nation should be centralized under a strong leadership that will guide the nation towards national rebirth. Revolutionary Nationalists oppose traditional structures like the monarchy and capitalism while also being strongly anti-communist. Beyond that the ideology is very adaptable to the nation, as some have adopted very progressive ideals while others propose more traditional roles in society. Nevertheless the one thing that unites all strands of the ideology is state supremacy over society"
+revolutionary_nationalist_subtype_desc:0 "Revolutionary Nationalism is a catch-all term for all ideologies that promote ultranationalism, militarism and revolution against old, reactionary structures. It advocates that the nation should be centralized under a strong leadership that will guide the nation towards national rebirth. Revolutionary Nationalists oppose capitalism, democracy and ‘’reactionary’’ forms of government while also being strongly anti-marxist. Beyond that the ideology is very adaptable to the nation, as some have adopted very progressive ideals while others propose more traditional roles in society. Nevertheless the one thing that unites all strands of the ideology is state supremacy over society."
 
 #Countries
 
@@ -131,10 +131,10 @@ FIN_libertarian_socialist_party:0 "SDP"
 FIN_libertarian_socialist_party_long:0 "Suomen Sosialidemokraattinen Puolue"
 FIN_social_democrat_party:0 "SDP"
 FIN_social_democrat_party_long:0 "Suomen Sosialidemokraattinen Puolue"
-FIN_social_liberal_party:0 "RKP"
-FIN_social_liberal_party_long:0 "Suomen Ruotsalainen Kansanpuolue"
-FIN_market_liberal_party:0 "KE"
-FIN_market_liberal_party_long:0 "Kansallinen Edistyspuolue"
+FIN_social_liberal_party:0 "KE"
+FIN_social_liberal_party_long:0 "Kansallinen Edistyspuolue"
+FIN_market_liberal_party:0 "RKP"
+FIN_market_liberal_party_long:0 "Suomen Ruotsalainen Kansanpuolue"
 FIN_social_conservative_party:0 "Kesk"
 FIN_social_conservative_party_long:0 "Maalaisliitto"
 FIN_authoritarian_democrat_party:0 "Kok"
@@ -163,11 +163,11 @@ SWE_market_liberal_party:0 "Bondeförbundet"
 SWE_market_liberal_party_long:0 "Bondeförbundet"
 SWE_social_conservative_party:0 "Valmansförbundet"
 SWE_social_conservative_party_long:0 "Allmänna Valmansförbundet"
-SWE_authoritarian_democrat_party:0 "SNF"
+SWE_authoritarian_democrat_party:0 "Nationella Förbundet"
 SWE_authoritarian_democrat_party_long:0 "Sveriges Nationella Förbund"
 SWE_paternal_autocrat_party:0 "Kyrkliga Folkpartiet"
 SWE_paternal_autocrat_party_long:0 "Kyrkliga Folkpartiet"
-SWE_national_populist_party:0 "NSR"
+SWE_national_populist_party:0 "Nysvenskarna"
 SWE_national_populist_party_long:0 "Nysvenska Rörelsen"
 SWE_revolutionary_nationalist_party:0 "Lindholmarna"
 SWE_revolutionary_nationalist_party_long:0 "Lindholmarna"
@@ -431,6 +431,58 @@ FER_national_populist_party:0 ""
 FER_national_populist_party_long:0 ""
 FER_revolutionary_nationalist_party:0 ""
 FER_revolutionary_nationalist_party_long:0 ""
+
+#Beiyang
+BEI_internationalist_party:0 "CPC"
+BEI_internationalist_party_long:0 "Zhōngguó Gòngchǎndǎng"
+BEI_vanguardist_party:0 "CPC"
+BEI_vanguardist_party_long:0 "Zhōngguó Gòngchǎndǎng"
+BEI_collectivist_party:0 "CPC"
+BEI_collectivist_party_long:0 "Zhōngguó Gòngchǎndǎng"
+BEI_libertarian_socialist_party:0 "CPC"
+BEI_libertarian_socialist_party_long:0 "Zhōngguó Gòngchǎndǎng"
+BEI_social_democrat_party:0 "Left-KMT"
+BEI_social_democrat_party_long:0 "Leftist Kuomintang"
+BEI_social_liberal_party:0 "Anfu Club"
+BEI_social_liberal_party_long:0 "Anfu Club"
+BEI_market_liberal_party:0 "Research Clique"
+BEI_market_liberal_party_long:0 "Research Clique"
+BEI_social_conservative_party:0 "Right-KMT"
+BEI_social_conservative_party_long:0 "Conservative Kuomintang"
+BEI_authoritarian_democrat_party:0 "Zhili Clique"
+BEI_authoritarian_democrat_party_long:0 "Zhili Clique"
+BEI_paternal_autocrat_party:0 "Fengtian Clique"
+BEI_paternal_autocrat_party_long:0 "Fengtian Clique"
+BEI_national_populist_party:0 "Young China"
+BEI_national_populist_party_long:0 "Young China Party"
+BEI_revolutionary_nationalist_party:0 "Young China"
+BEI_revolutionary_nationalist_party_long:0 "Young China Party"
+
+#Fengtian Clique
+MAN_internationalist_party:0 "CPC"
+MAN_internationalist_party_long:0 "Zhōngguó Gòngchǎndǎng"
+MAN_vanguardist_party:0 "CPC"
+MAN_vanguardist_party_long:0 "Zhōngguó Gòngchǎndǎng"
+MAN_collectivist_party:0 "CPC"
+MAN_collectivist_party_long:0 "Zhōngguó Gòngchǎndǎng"
+MAN_libertarian_socialist_party:0 "CPC"
+MAN_libertarian_socialist_party_long:0 "Zhōngguó Gòngchǎndǎng"
+MAN_social_democrat_party:0 "Left-KMT"
+MAN_social_democrat_party_long:0 "Leftist Kuomintang"
+MAN_social_liberal_party:0 "Anfu Club"
+MAN_social_liberal_party_long:0 "Anfu Club"
+MAN_market_liberal_party:0 "Research Clique"
+MAN_market_liberal_party_long:0 "Research Clique"
+MAN_social_conservative_party:0 "Right-KMT"
+MAN_social_conservative_party_long:0 "Conservative Kuomintang"
+MAN_authoritarian_democrat_party:0 "Communications Clique"
+MAN_authoritarian_democrat_party_long:0 "Communications Clique"
+MAN_paternal_autocrat_party:0 "Fengtian Clique"
+MAN_paternal_autocrat_party_long:0 "Fengtian Clique"
+MAN_national_populist_party:0 "Concordia Association"
+MAN_national_populist_party_long:0 "Concordia Association"
+MAN_revolutionary_nationalist_party:0 "Young China"
+MAN_revolutionary_nationalist_party_long:0 "Young China Party"
 
 #India
 RAJ_internationalist_party:0 "CPI"
