--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -5,3 +5,4 @@
  LOADING_TIP_3:0 "I look upon him as the greatest criminal known for having plunged the world into war.\n- King George V on his cousin, Wilhelm II"
  LOADING_TIP_4:0 "After I am dead, the boy will ruin himself in twelve months.\n- King George V on his son, Edward"
  LOADING_TIP_5:0 "In our age there is no such thing as 'keeping out of politics.' All issues are political issues, and politics itself is a mass of lies, evasions, folly, hatred and schizophrenia.\n- Eric Blair"
+ LOADING_TIP_6:0 "I am firmly convinced that Spain is the strongest country of the world. Century after century trying to destroy herself and still no success.\n- Otto von Bismarck"
