--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -513,7 +513,7 @@
  STATE_512:0 "Patagonia"
  STATE_513:0 "Tlemcen"
  STATE_514:0 "Maghreb"
- STATE_515:0 "Niger-Chad"
+ STATE_515:0 "Chad"
  STATE_516:0 "Northwest Siberia"
  STATE_517:0 "Victoria"
  STATE_518:0 "Tasmania"
@@ -555,7 +555,7 @@
  STATE_554:0 "Damascus"
  STATE_555:0 "Kuril Islands"
  STATE_556:0 "Mali"
- STATE_557:0 "Mauritania"
+ STATE_557:0 "Sahara"
  STATE_558:0 "Nigeria"
  STATE_559:0 "Somalia"
  STATE_560:0 "Nikolayevsk"
