--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -97,27 +97,29 @@ revolutionary_nationalist_subtype_desc:0 "Revolutionary Nationalism is a catch-a
  ########
 
 #Austria
-AUS_vanguardist_party:0 "JSV"
-AUS_vanguardist_party_long:0 "Jakobiner Sozialistischer Verein"
+AUS_internationalist_party:0 "Austromarxisten"
+AUS_internationalist_party_long:0 "Austromarxisten"
+AUS_vanguardist_party:0 "Kommunisten"
+AUS_vanguardist_party_long:0 "Kommunistische Partei Deutsch-Österreichs"
 AUS_collectivist_party:0 "Austromarxisten"
 AUS_collectivist_party_long:0 "Austromarxisten"
-AUS_libertarian_socialist_party:0 "SDAPÖ"
+AUS_libertarian_socialist_party:0 "SDAPÖ-Sozialisten"
 AUS_libertarian_socialist_party_long:0 "Sozialdemokratische Arbeiterpartei Österreichs"
-AUS_social_democrat_party:0 "SDAPÖ"
+AUS_social_democrat_party:0 "SDAPÖ-Sozialdemokraten"
 AUS_social_democrat_party_long:0 "Sozialdemokratische Arbeiterpartei Österreichs"
-AUS_social_liberal_party:0 "LB"
+AUS_social_liberal_party:0 "Landbund"
 AUS_social_liberal_party_long:0 "Landbund"
-AUS_market_liberal_party:0 "NLP"
+AUS_market_liberal_party:0 "Nationalliberale"
 AUS_market_liberal_party_long:0 "Nationalliberale Partei "
-AUS_social_conservative_party:0 "CS"
+AUS_social_conservative_party:0 "CS-Christlichsoziale"
 AUS_social_conservative_party_long:0 "Christlichsoziale Partei"
-AUS_authoritarian_democrat_party:0 "CS"
+AUS_authoritarian_democrat_party:0 "CS-Vaterländische Front"
 AUS_authoritarian_democrat_party_long:0 "Christlichsoziale Partei"
-AUS_paternal_autocrat_party:0 "GDVP"
+AUS_paternal_autocrat_party:0 "Volkspartei"
 AUS_paternal_autocrat_party_long:0 "Großdeutsche Volkspartei"
-AUS_national_populist_party:0 "ÖHB"
+AUS_national_populist_party:0 "Heimatblock"
 AUS_national_populist_party_long:0 "Österreichischer Heimatblock"
-AUS_revolutionary_nationalist_party:0 "DAP"
+AUS_revolutionary_nationalist_party:0 "Deutsche Arbeiterpartei"
 AUS_revolutionary_nationalist_party_long:0 "Deutsche Arbeiterpartei"
 
 #Finland
@@ -173,8 +175,8 @@ SWE_revolutionary_nationalist_party:0 "Lindholmarna"
 SWE_revolutionary_nationalist_party_long:0 "Lindholmarna"
 
 #United Kingdom
-ENG_internationalist_party:0 "WIL"
-ENG_internationalist_party_long:0 "Workers' International League "
+ENG_internationalist_party:0 "International League"
+ENG_internationalist_party_long:0 "Workers' International League"
 ENG_vanguardist_party:0 "CPGB-Jacobins"
 ENG_vanguardist_party_long:0 "Communist Party of Great Britain"
 ENG_collectivist_party:0 "CPGB-Leninists"
@@ -207,13 +209,13 @@ FRA_collectivist_party:0 "PCUF"
 FRA_collectivist_party_long:0 "Parti Collectiviste-Unioniste Français"
 FRA_libertarian_socialist_party:0 "SFIO"
 FRA_libertarian_socialist_party_long:0 "Section Française de l'Internationale Ouvrière"
-FRA_social_democrat_party:0 "PRS"
+FRA_social_democrat_party:0 "Republicain-Socialistes"
 FRA_social_democrat_party_long:0 "Parti Republicain-Socialiste"
-FRA_social_liberal_party:0 "PR"
+FRA_social_liberal_party:0 "Radicaux"
 FRA_social_liberal_party_long:0 "Parti Radical"
-FRA_market_liberal_party:0 "ARD"
+FRA_market_liberal_party:0 "Républicains Démocrates"
 FRA_market_liberal_party_long:0 "Alliance Républicaine Démocratique"
-FRA_social_conservative_party:0 "FR"
+FRA_social_conservative_party:0 "Républicains"
 FRA_social_conservative_party_long:0 "Fédération Républicaine"
 FRA_authoritarian_democrat_party:0 "Croix-de-Feu"
 FRA_authoritarian_democrat_party_long:0 "Croix-de-Feu"
@@ -221,7 +223,7 @@ FRA_paternal_autocrat_party:0 "AF-Royalistes"
 FRA_paternal_autocrat_party_long:0 "Action Française"
 FRA_national_populist_party:0 "AF-Intégralistes"
 FRA_national_populist_party_long:0 "Action Française"
-FRA_revolutionary_nationalist_party:0 "MF"
+FRA_revolutionary_nationalist_party:0 "Francistes"
 FRA_revolutionary_nationalist_party_long:0 "Mouvement Franciste"
 
 #Luxemburg
@@ -329,23 +331,23 @@ ITA_revolutionary_nationalist_party:0 "ANI-R"
 ITA_revolutionary_nationalist_party_long:0 "Associazione Nazionalista Rivoluzionaria Italiana"
 
 #Turkey
-TUR_internationalist_party:0 "TKP"
+TUR_internationalist_party:0 "Komünistler"
 TUR_internationalist_party_long:0 "Türkiye Komünist Partisi"
-TUR_vanguardist_party:0 "IHDP"
+TUR_vanguardist_party:0 "İslam Devrimcileri"
 TUR_vanguardist_party_long:0 "İslam Halkının Devrimci Partisi"
-TUR_collectivist_party:0 "TKP"
+TUR_collectivist_party:0 "Kolektivistler"
 TUR_collectivist_party_long:0 "Türkiye Kolektif Parti"
-TUR_libertarian_socialist_party:0 "TDSP"
+TUR_libertarian_socialist_party:0 "Sosyalistler"
 TUR_libertarian_socialist_party_long:0 "Türkiye Devrimci Sosyalist Partisi"
-TUR_social_democrat_party:0 "CF"
+TUR_social_democrat_party:0 "Cumhuriyetçiler"
 TUR_social_democrat_party_long:0 "Cumhuriyet Fırkası"
-TUR_social_liberal_party:0 "HI"
+TUR_social_liberal_party:0 "Hürriyet ve İtilaf"
 TUR_social_liberal_party_long:0 "Hürriyet ve İtilaf"
-TUR_market_liberal_party:0 "AF"
+TUR_market_liberal_party:0 "Ahrar Fırkası"
 TUR_market_liberal_party_long:0 "Ahrar Fırkası"
-TUR_social_conservative_party:0 "TF"
+TUR_social_conservative_party:0 "Teceddüd Fırkası"
 TUR_social_conservative_party_long:0 "Teceddüd Fırkası"
-TUR_authoritarian_democrat_party:0 "CHP"
+TUR_authoritarian_democrat_party:0 "Kemalistler"
 TUR_authoritarian_democrat_party_long:0 "Cumhuriyet Halk Partisi"
 TUR_paternal_autocrat_party:0 "Askeri Cunta"
 TUR_paternal_autocrat_party_long:0 "Askeri Cunta"
