--- a/localisation/ToR_Countries_l_english.yml
+++ b/localisation/ToR_Countries_l_english.yml
@@ -747,9 +747,9 @@ BUL_social_conservative_DEF:0 "Bulgaria"
 BUL_authoritarian_democrat:0 "Tsardom of Bulgaria"
 BUL_authoritarian_democrat_ADJ:0 "Bulgarian"
 BUL_authoritarian_democrat_DEF:0 "The Tsardom of Bulgaria"
-BUL_paternal_autocrat:0 "Bulgarian State"
+BUL_paternal_autocrat:0 "Tsardom of Bulgaria"
 BUL_paternal_autocrat_ADJ:0 "Bulgarian"
-BUL_paternal_autocrat_DEF:0 "The Bulgarian State"
+BUL_paternal_autocrat_DEF:0 "The Tsardom of Bulgaria"
 BUL_national_populist:0 "Nationalist Bulgaria"
 BUL_national_populist_ADJ:0 "Nationalist Bulgarian"
 BUL_national_populist_DEF:0 "The Nationalist Bulgaria"
