--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -1,8 +1,10 @@
 ﻿l_english:
- LOADING_TIP_0:0 "My name is Fanya Kaplan. Today I shot Lenin. I had resolved to kill Lenin long ago. I consider him a traitor to the Revolution.\n- Fanya Kaplan after the assassination of Vladimir Lenin, 1918"
- LOADING_TIP_1:0 "There is only one person who is master in this Empire and I am not going to tolerate any other.\n- Kaiser Wilhelm II"
+ LOADING_TIP_0:0 "My name is Fanya Kaplan. Today I shot Lenin. I had resolved to kill Lenin long ago. I consider him a traitor to the Revolution.\n- Fanya Kaplan"
+ LOADING_TIP_1:0 "There is only one person who is master in this Empire and I am not going to tolerate any other.\n- Wilhelm II"
  LOADING_TIP_2:0 "I regard every Social Democrat as an enemy of the Empire and Fatherland.\n- Kaiser Wilhelm II"
- LOADING_TIP_3:0 "I look upon him as the greatest criminal known for having plunged the world into war.\n- King George V on his cousin, Wilhelm II"
- LOADING_TIP_4:0 "After I am dead, the boy will ruin himself in twelve months.\n- King George V on his son, Edward"
+ LOADING_TIP_3:0 "I look upon him as the greatest criminal known for having plunged the world into war.\n- George V on his cousin, Wilhelm II"
+ LOADING_TIP_4:0 "After I am dead, the boy will ruin himself in twelve months.\n- George V on his son, Edward"
  LOADING_TIP_5:0 "In our age there is no such thing as 'keeping out of politics.' All issues are political issues, and politics itself is a mass of lies, evasions, folly, hatred and schizophrenia.\n- Eric Blair"
  LOADING_TIP_6:0 "I am firmly convinced that Spain is the strongest country of the world. Century after century trying to destroy herself and still no success.\n- Otto von Bismarck"
+ LOADING_TIP_7:0 "Something like this could have happened in another universe.\n- Eric Blair"
+ LOADING_TIP_8:0 "People sleep peaceably in their beds at night only because rough men stand ready to do violence on their behalf.\n- Eric Blair"
