--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -513,7 +513,7 @@
  STATE_512:0 "Patagonia"
  STATE_513:0 "Tlemcen"
  STATE_514:0 "Maghreb"
- STATE_515:0 "Chad"
+ STATE_515:0 "Tchad"
  STATE_516:0 "Northwest Siberia"
  STATE_517:0 "Victoria"
  STATE_518:0 "Tasmania"
@@ -544,7 +544,7 @@
  STATE_543:0 "Madagascar"
  STATE_544:0 "Mozambique"
  STATE_545:0 "Rhodesia"
- STATE_546:0 "Tanganjika"
+ STATE_546:0 "Tanganyika"
  STATE_547:0 "Kenya"
  STATE_548:0 "Uganda"
  STATE_549:0 "Sudan"
@@ -658,7 +658,7 @@
  STATE_657:0 "Birobidzhan"
  STATE_658:0 "Abu Dhabi"
  STATE_659:0 "Aden"
- STATE_660:0 "Equatorial Africa"
+ STATE_660:0 "Afrique Équatoriale"
  STATE_661:0 "Tripolitania"
  STATE_662:0 "Sirte"
  STATE_663:0 "Cyrenaica"
@@ -692,7 +692,7 @@
  STATE_691:0 "Trinidad"
  STATE_692:0 "Windward Islands"
  STATE_693:0 "Southern Bahamas"
- STATE_694:0 "French Caribbean"
+ STATE_694:0 "Antilles Islands"
  STATE_695:0 "Curacao"
  STATE_696:0 "Bermuda"
  STATE_697:0 "Madeira"
@@ -761,6 +761,6 @@
  STATE_760:0 "Dabancheng"
  STATE_761:0 "Hulunbuir"
  STATE_762:0 "Kattowitz"
- STATE_763:0 "Togoland"
+ STATE_763:0 "Togo"
  STATE_764:0 "Benin"
  STATE_765:0 "Côte d'Ivoire"
