--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -231,9 +231,9 @@ FRA_internationalist_party:0 "PCF-Internationalistes"
 FRA_internationalist_party_long:0 "Parti Communiste Français"
 FRA_vanguardist_party:0 "PCF-Jacobins"
 FRA_vanguardist_party_long:0 "Parti Communiste Français"
-FRA_collectivist_party:0 "PCUF"
+FRA_collectivist_party:0 "Collectivistes-Unionistes"
 FRA_collectivist_party_long:0 "Parti Collectiviste-Unioniste Français"
-FRA_libertarian_socialist_party:0 "SFIO"
+FRA_libertarian_socialist_party:0 "Travailleurs"
 FRA_libertarian_socialist_party_long:0 "Section Française de l'Internationale Ouvrière"
 FRA_social_democrat_party:0 "Republicain-Socialistes"
 FRA_social_democrat_party_long:0 "Parti Republicain-Socialiste"
@@ -332,29 +332,29 @@ RUS_revolutionary_nationalist_party_long:0 "Smenovekhovtsy"
 
 #Italy
 ITA_internationalist_party:0 "PCd'I-Spartachisti"
-ITA_internationalist_party_long:0 "Partito Comunista d’Italia"
+ITA_internationalist_party_long:0 "Partito Comunista d’Italia (Spartacist Faction)"
 ITA_vanguardist_party:0 "PCd'I-Massimalisti"
-ITA_vanguardist_party_long:0 "Partito Comunista d’Italia"
-ITA_collectivist_party:0 "PSI"
+ITA_vanguardist_party_long:0 "Partito Comunista d’Italia (Maximalist Faction)"
+ITA_collectivist_party:0 "Socialisti"
 ITA_collectivist_party_long:0 "Partito Socialista Italiano"
-ITA_libertarian_socialist_party:0 "PSU"
+ITA_libertarian_socialist_party:0 "Socialisti Unitari"
 ITA_libertarian_socialist_party_long:0 "Partito Socialista Unitario"
-ITA_social_democrat_party:0 "PSRI"
+ITA_social_democrat_party:0 "Riformisti"
 ITA_social_democrat_party_long:0 "Partito Socialista Riformista Italiano"
-ITA_social_liberal_party:0 "PRI"
+ITA_social_liberal_party:0 "Radicali"
 ITA_social_liberal_party_long:0 "Partito Radicale Italiano"
-ITA_market_liberal_party:0 "PLI"
+ITA_market_liberal_party:0 "Liberali"
 ITA_market_liberal_party_long:0 "Partito Liberale Italiano"
-ITA_social_conservative_party:0 "PPI"
+ITA_social_conservative_party:0 "Populisti"
 ITA_social_conservative_party_long:0 "Partito Popolare Italiano"
 ITA_authoritarian_democrat_party:0 "PEAdI"
 ITA_authoritarian_democrat_party_long:0 "Partito Economico e Agrario d’Italia"
 ITA_paternal_autocrat_party:0 "Giunta Militare"
 ITA_paternal_autocrat_party_long:0 "Giunta Militare"
-ITA_national_populist_party:0 "ANI"
-ITA_national_populist_party_long:0 "Associazione Nazionalista Italiana"
-ITA_revolutionary_nationalist_party:0 "ANI-R"
-ITA_revolutionary_nationalist_party_long:0 "Associazione Nazionalista Rivoluzionaria Italiana"
+ITA_national_populist_party:0 "ANI-Nazionalisti"
+ITA_national_populist_party_long:0 "Associazione Nazionalista Italiana (Nationalist Faction)"
+ITA_revolutionary_nationalist_party:0 "ANI-Rivoluzionari"
+ITA_revolutionary_nationalist_party_long:0 "Associazione Nazionalista Italiana (Revolutionary Faction)"
 
 #Turkey
 TUR_internationalist_party:0 "Komünistler"
@@ -477,10 +477,10 @@ FER_market_liberal_party:0 ""
 FER_market_liberal_party_long:0 ""
 FER_social_conservative_party:0 ""
 FER_social_conservative_party_long:0 ""
-FER_authoritarian_democrat_party:0 "PZK"
+FER_authoritarian_democrat_party:0 "Vremennoye Pravitel'stvo"
 FER_authoritarian_democrat_party_long:0 "Priamurskiy Zemskiy Kray"
-FER_paternal_autocrat_party:0 ""
-FER_paternal_autocrat_party_long:0 ""
+FER_paternal_autocrat_party:0 "Imperskiy Soyuz"
+FER_paternal_autocrat_party_long:0 "Rossiyskiy Imperskiy Soyuz Orden"
 FER_national_populist_party:0 ""
 FER_national_populist_party_long:0 ""
 FER_revolutionary_nationalist_party:0 ""
@@ -693,11 +693,37 @@ RHO_market_liberal_party:0 "Rhodesia Party"
 RHO_market_liberal_party_long:0 "Responsible Government Association"
 RHO_social_conservative_party:0 "Liberal Party"
 RHO_social_conservative_party_long:0 "Rhodesia Liberal Party"
-RHO_authoritarian_democrat_party:0 "Federation Government"
-RHO_authoritarian_democrat_party_long:0 "Federation Government"
+RHO_authoritarian_democrat_party:0 "Federation Council"
+RHO_authoritarian_democrat_party_long:0 "Federation Council"
 RHO_paternal_autocrat_party:0 "Executive Council"
 RHO_paternal_autocrat_party_long:0 "Executive Council"
 RHO_national_populist_party:0 "Empire Loyalists"
 RHO_national_populist_party_long:0 "League of Empire Loyalists (Rhodesia Branch)"
 RHO_revolutionary_nationalist_party:0 "National Congress"
 RHO_revolutionary_nationalist_party_long:0 "Rhodesia African National Congress"
+
+#East Africa
+BEA_internationalist_party:0 ""
+BEA_internationalist_party_long:0 ""
+BEA_vanguardist_party:0 ""
+BEA_vanguardist_party_long:0 ""
+BEA_collectivist_party:0 ""
+BEA_collectivist_party_long:0 ""
+BEA_libertarian_socialist_party:0 ""
+BEA_libertarian_socialist_party_long:0 ""
+BEA_social_democrat_party:0 ""
+BEA_social_democrat_party_long:0 ""
+BEA_social_liberal_party:0 ""
+BEA_social_liberal_party_long:0 ""
+BEA_market_liberal_party:0 ""
+BEA_market_liberal_party_long:0 ""
+BEA_social_conservative_party:0 ""
+BEA_social_conservative_party_long:0 ""
+BEA_authoritarian_democrat_party:0 ""
+BEA_authoritarian_democrat_party_long:0 ""
+BEA_paternal_autocrat_party:0 "Executive Council"
+BEA_paternal_autocrat_party_long:0 "Executive Council"
+BEA_national_populist_party:0 "Empire Loyalists"
+BEA_national_populist_party_long:0 "League of Empire Loyalists (East African Branch)"
+BEA_revolutionary_nationalist_party:0 "African Association"
+BEA_revolutionary_nationalist_party_long:0 "Tanganyika African Association"
