--- a/localisation/ToR_Countries_l_english.yml
+++ b/localisation/ToR_Countries_l_english.yml
@@ -3564,6 +3564,9 @@ IRQ_revolutionary_nationalist_ADJ:0 "Iraqi"
 IRQ_revolutionary_nationalist_DEF:0 "revolutionary_nationalist Iraq"
 
 #Saudi Arabia
+SAU_internationalist:0 "Arabian People's Republic"
+SAU_internationalist_ADJ:0 "Arabian"
+SAU_internationalist_DEF:0 "The Arabian People's Republic"
 SAU_vanguardist:0 "Workers Arabian Commonwealth"
 SAU_vanguardist_ADJ:0 "Arabian"
 SAU_vanguardist_DEF:0 "The Arabian Commonwealth"
@@ -3573,18 +3576,18 @@ SAU_collectivist_DEF:0 "The Arabian Soviet State"
 SAU_libertarian_socialist:0 "Arabian Commune"
 SAU_libertarian_socialist_ADJ:0 "Arabian"
 SAU_libertarian_socialist_DEF:0 "The Arabian Commune"
-SAU_social_democrat:0 "Arabian"
+SAU_social_democrat:0 "Saudi Arabia"
 SAU_social_democrat_ADJ:0 "Arabian"
-SAU_social_democrat_DEF:0 "The Arabian Republic"
-SAU_social_liberal:0 "Arabian"
+SAU_social_democrat_DEF:0 "The Arabian Kingdom"
+SAU_social_liberal:0 "Saudi Arabia"
 SAU_social_liberal_ADJ:0 "Arabian"
-SAU_social_liberal_DEF:0 "The Arabian Republic"
-SAU_market_liberal:0 "Arabian"
+SAU_social_liberal_DEF:0 "The Arabian Kingdom"
+SAU_market_liberal:0 "Saudi Arabia"
 SAU_market_liberal_ADJ:0 "Arabian"
-SAU_market_liberal_DEF:0 "The Arabian Republic"
-SAU_social_conservative:0 "Arabia"
+SAU_market_liberal_DEF:0 "The Arabian Kingdom"
+SAU_social_conservative:0 "Saudi Arabia"
 SAU_social_conservative_ADJ:0 "Arabian"
-SAU_social_conservative_DEF:0 "The Arabian Republic"
+SAU_social_conservative_DEF:0 "The Arabian Kingdom"
 SAU_authoritarian_democrat:0 "Saudi Arabia"
 SAU_authoritarian_democrat_ADJ:0 "Arabian"
 SAU_authoritarian_democrat_DEF:0 "The Arabian Kingdom"
@@ -3610,16 +3613,16 @@ ARB_libertarian_socialist_ADJ:0 "Arabian"
 ARB_libertarian_socialist_DEF:0 "The Arabian Commune"
 ARB_social_democrat:0 "Arabian"
 ARB_social_democrat_ADJ:0 "Arabian"
-ARB_social_democrat_DEF:0 "The Arabian Republic"
+ARB_social_democrat_DEF:0 "The Arabian Kingdom"
 ARB_social_liberal:0 "Arabian"
 ARB_social_liberal_ADJ:0 "Arabian"
-ARB_social_liberal_DEF:0 "The Arabian Republic"
+ARB_social_liberal_DEF:0 "The Arabian Kingdom"
 ARB_market_liberal:0 "Arabian"
 ARB_market_liberal_ADJ:0 "Arabian"
-ARB_market_liberal_DEF:0 "The Arabian Republic"
+ARB_market_liberal_DEF:0 "The Arabian Kingdom"
 ARB_social_conservative:0 "Arabia"
 ARB_social_conservative_ADJ:0 "Arabian"
-ARB_social_conservative_DEF:0 "The Arabian Republic"
+ARB_social_conservative_DEF:0 "The Arabian Kingdom"
 ARB_authoritarian_democrat:0 "Hashemite Arabia"
 ARB_authoritarian_democrat_ADJ:0 "Arabian"
 ARB_authoritarian_democrat_DEF:0 "Hashemite Arabia"
