--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -91,11 +91,11 @@
  STATE_90:0 "Kielce"
  STATE_91:0 "Lviv"
  STATE_92:0 "Lublin"
- STATE_93:0 "Wolyn"
- STATE_94:0 "Polesie"
+ STATE_93:0 "Volýn"
+ STATE_94:0 "Paliessie"
  STATE_95:0 "Navahrudak"
  STATE_96:0 "Vilnius"
- STATE_97:0 "Bialystok"
+ STATE_97:0 "Bielastok"
  STATE_98:0 "Plock"
  STATE_99:0 "Jutland"
  STATE_100:0 "Iceland"
